# OpenCraft

./: CMakeLists.txt  Main.cpp  OpenGLWindow.cpp  OpenGLWindow.hpp  README.md  TODO.txt  camera.cpp  camera.hpp  eventhandler.cpp  eventhandler.hpp  groundblock.cpp  groundblock.hpp  light.hpp  main.cpp  map.cpp  map.hpp  model.cpp  model.hpp  openglwindow.cpp  openglwindow.hpp  sea.cpp  sea.hpp  textureshader.cpp  textureshader.hpp  watershader.cpp  watershader.hpp
assets/: MapDescription.txt  cube.mtl  plane.mtl  stone_cube.mtl
assets/shaders/: WaterShader.frag  WaterShader.vert  block_texture.frag
block/: Block.hpp
block/grassBlock/: GrassBlock.cpp  GrassBlock.hpp
block/stoneBlock/: StoneBlock.cpp  StoneBlock.hpp
block/woodBlock/: WoodBlock.hpp
camera/: Camera.cpp  Camera.hpp
eventHandler/: EventHandler.cpp
examples/: CMakeLists.txt
examples/cube-craft/: CMakeLists.txt  Main.cpp  OpenGLWindow.cpp  OpenGLWindow.hpp
examples/cube-craft/block/: Block.cpp
examples/cube-craft/camera/: Camera.cpp
examples/cube-craft/eventHandler/: EventHandler.hpp
examples/cube-craft/light/: Light.hpp
examples/cube-craft/model/: Model.cpp  Model.hpp
examples/cube-craft/render/: TextureRender.cpp
examples/cube-craft/sea/: Sea.cpp
examples/cube-craft/ui/: UI.cpp
examples/open-craft/: CMakeLists.txt  Main.cpp
examples/open-craft/block/: Block.hpp
examples/open-craft/sea/: Sea.cpp
live-demo/: index.html  open-craft.data  open-craft.js  open-craft.wasm
map/: SeaMap.cpp  SeaMap.hpp
render/: FluidRender.cpp
sea/: Sea.cpp  Sea.hpp
ui/: UI.cpp  UI.hpp
(+14 files in other folders)
